fix: Add dark mode styling for download license card ref #27430

--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/misc/mixins.less
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/misc/mixins.less
@@ -86,6 +86,7 @@
 // COLOR SCHEMES
 
 .mx-theme-light {
+	color-scheme: light;
 	// REGULAR VIEWER REFERENCE THEME COLORS
     --ci-color1: #015999;
     --ci-hovercolor1: #1B70B1;
@@ -129,6 +130,7 @@
 }
 
 .mx-theme-dark {
+	color-scheme: dark;
 	// DARK MODE COLORS
     --ci-color1: #015999;
     --bg-general: #000e29;
